[package]
name = "image-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.6", features = ["macros"] }
axum_typed_multipart = "0.16.4"
dotenvy = "0.15.7"
percent-encoding = "2.3.2"
sqlx = { version = "0.8.6", features = ["macros", "postgres", "runtime-tokio-rustls", "uuid"] }
tempfile = "3.23.0"
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = { version = "0.7.16", features = ["io"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
